spices/ecs/tests/errors/cap-mint-wrong-component.tur
;; I2 negative regression: WriteCap<Pos> and WriteCap<Vel> are nominally
;; distinct. A function that consumes a WriteCap<Pos> must reject a
;; WriteCap<Vel> at the type level. Requires -Xsubstructural for the
;; linear discipline to be enforced.

(defmodule cap_mint_wrong_component_test
  (export)

(import ecs/world :refer [defcomponent-class defcomponent-class-instance])
(import ecs/cap   :refer [WriteCap make-write-cap make-read-cap])

(defstruct Pos [x : int])
(defstruct Vel [x : int])
(defstruct GameWorld [Pos : int Vel : int])

(defcomponent-class Pos)
(defcomponent-class Vel)
(defcomponent-class-instance GameWorld Pos)
(defcomponent-class-instance GameWorld Vel)

(defn consume-pos [^linear cap : (WriteCap Pos)] : nil
  ```c
  (void)cap;
  ```)

(defn main [] : int
  (let [vel-cap (mint-GameWorld-Vel-write-cap 1)]
    (consume-pos vel-cap))   ;; ERROR: WriteCap<Vel> is not WriteCap<Pos>
  0)

) ;; end defmodule cap_mint_wrong_component_test
